--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,14 @@ body {
   height: 80px;
 }
 
-.sitx-header__inner {
+.sitx-header__moder {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: #111517;
+}
+
+.sitx-header__inner a {
   font-weight: 800;
   font-size: 24px;
   line-height: 33px;
@@ -62,14 +69,15 @@ body {
 }
 
 @media screen and (max-width: 700px) {
-  .sitx-header {
-    max-width: 470px;
-  }
-  .sitx-header__inner {
+  .sitx-header__inner a {
     font-weight: 800;
     font-size: 14px;
     line-height: 20px;
     margin-left: 16px;
+  }
+  .sitx-header__moder {
+    font-size: 12px;
+    line-height: 16px;
   }
   .sitx-header__link {
     font-weight: 600;
@@ -97,19 +105,19 @@ body {
 .hero__inner-taxt {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 75px;
 }
 
 .name {
   display: inline-block;
   max-width: 480px;
-  background: #FFFFFF;
+  width: 100%;
   box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0532439);
   border-radius: 5px;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #848484;
   padding: 18px 270px 18px 74px;
   border: 2px solid transparent;
 }
@@ -144,6 +152,7 @@ body {
   .name {
     max-width: 343px;
     height: 48px;
+    padding: 0;
   }
 }
 .hero__link {
@@ -186,11 +195,17 @@ body {
   .hero {
     max-width: 375px;
     margin: 0 auto;
+    padding: 0;
   }
   .hero__inner-taxt {
     display: inline-block;
   }
   .hero__link + .hero__link {
     margin-top: 40px;
+  }
+  .name {
+    display: inline;
+    max-width: 398px;
+    width: 100%;
   }
 }/*# sourceMappingURL=main.css.map */
