--- a/scss/_block/_header.scss
+++ b/scss/_block/_header.scss
@@ -8,7 +8,14 @@
     height: 80px;
 }
 
-.sitx-header__inner {
+.sitx-header__moder {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: #111517;
+}
+
+.sitx-header__inner a {
     font-weight: 800;
     font-size: 24px;
     line-height: 33px;
@@ -25,16 +32,17 @@
 
 
 @media screen and (max-width:700px) {
-    .sitx-header {
-        max-width: 470px;
-        
-    }
 
-    .sitx-header__inner {
+    .sitx-header__inner a {
         font-weight: 800;
         font-size: 14px;
         line-height: 20px;
         margin-left: 16px;
+    }
+
+    .sitx-header__moder {
+        font-size: 12px;
+        line-height: 16px;
     }
 
     .sitx-header__link {
