--- a/scss/_block/_hero.scss
+++ b/scss/_block/_hero.scss
@@ -3,6 +3,7 @@
     margin: 0 auto;
 }
 
+
 .input {
     display: flex;
     align-items: center;
@@ -18,24 +19,27 @@
 .hero__inner-taxt {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 75px;
 }
 
 .name {
     display: inline-block;
     max-width: 480px;
-    background: #FFFFFF;
+    width: 100%;
     box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0532439);
     border-radius: 5px;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    color: #848484;
+
     padding: 18px 270px 18px 74px;
     border: 2px solid transparent;
 }
 
 .input__select {
+
+
     padding: 18px 48px 18px 24px;
     background: #FFFFFF;
     box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0532439);
@@ -70,6 +74,7 @@
     .name {
         max-width: 343px;
         height: 48px;
+        padding: 0;
 
     }
 
@@ -117,14 +122,21 @@
     .hero {
         max-width: 375px;
         margin: 0 auto;
+        padding: 0;
     }
 
     .hero__inner-taxt {
         display: inline-block;
     }
 
+
     .hero__link+.hero__link {
         margin-top: 40px;
     }
 
+    .name {
+        display: inline;
+        max-width: 398px;
+        width: 100%;
+    }
 }
