--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,12 @@ body {
   font-family: "Nunito Sans", sans-serif;
 }
 
+.container {
+  max-width: 1320px;
+  width: 100%;
+  padding: 0 20px;
+}
+
 .sitx-header {
   max-width: 1380px;
   display: flex;
