--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -35,3 +35,9 @@ body {
     font-family: 'Nunito Sans', sans-serif;
 
 }
+
+.container{
+    max-width: 1320px;
+    width: 100%;
+    padding: 0 20px;
+}
