--- a/scss/_block/_header.scss
+++ b/scss/_block/_header.scss
@@ -30,6 +30,13 @@
     margin-right: 80px;
 }
 
+.imge{
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    padding: 8px;
+}
+
 
 @media screen and (max-width:700px) {
 
