--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,13 @@ body {
   margin-right: 80px;
 }
 
+.imge {
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  padding: 8px;
+}
+
 @media screen and (max-width: 700px) {
   .sitx-header__inner a {
     font-weight: 800;
@@ -112,7 +119,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 75px;
+  gap: 35px;
 }
 
 .name {
@@ -165,7 +172,7 @@ body {
   background: #FFFFFF;
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.0294384);
   border-radius: 5px;
-  max-width: 264px;
+  max-width: 200px;
   padding-bottom: 48px;
 }
 
