--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ body {
 }
 
 .imge {
-  width: 200px;
+  width: 280px;
   height: 200px;
   margin: 0 auto;
   padding: 8px;
@@ -168,11 +168,10 @@ body {
     padding: 0;
   }
 }
-.hero__link {
-  background: #FFFFFF;
-  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.0294384);
+#hero__link {
+  box-shadow: 0px 0px 5px 10px rgba(34, 33, 33, 0.029);
   border-radius: 5px;
-  max-width: 200px;
+  max-width: 280px;
   padding-bottom: 48px;
 }
 
@@ -184,9 +183,12 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 26px;
-  color: #111517;
   margin-top: 24px;
   margin-bottom: 16px;
+}
+
+#sun {
+  display: none;
 }
 
 .hero__text p {
@@ -213,7 +215,7 @@ body {
   .hero__inner-taxt {
     display: inline-block;
   }
-  .hero__link + .hero__link {
+  #hero__link + #hero__link {
     margin-top: 40px;
   }
   .name {
