--- a/scss/_block/_hero.scss
+++ b/scss/_block/_hero.scss
@@ -81,11 +81,10 @@
 
 //================================================
 
-.hero__link {
-    background: #FFFFFF;
-    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.0294384);
+#hero__link {
+    box-shadow: 0px 0px 5px 10px rgba(34, 33, 33, 0.029);
     border-radius: 5px;
-    max-width:200px;
+    max-width:280px;
     padding-bottom: 48px;
 }
 
@@ -97,11 +96,12 @@
     font-weight: 800;
     font-size: 18px;
     line-height: 26px;
-    color: #111517;
     margin-top: 24px;
     margin-bottom: 16px;
 }
-
+#sun{
+    display: none;
+}
 .hero__text p {
     font-weight: 600;
     font-size: 14px;
@@ -129,7 +129,7 @@
     }
 
 
-    .hero__link+.hero__link {
+    #hero__link+#hero__link {
         margin-top: 40px;
     }
 
