--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,13 @@ body {
   padding: 8px;
 }
 
+.erro {
+  color: red;
+  font-size: 15px;
+  margin-top: 20px;
+  display: none;
+}
+
 @media screen and (max-width: 700px) {
   .sitx-header__inner a {
     font-weight: 800;
