--- a/scss/_block/_header.scss
+++ b/scss/_block/_header.scss
@@ -39,7 +39,12 @@
     padding: 8px;
 }
 
-
+.erro{
+    color: red;
+    font-size: 15px;
+    margin-top: 20px;
+    display: none;
+}
 @media screen and (max-width:700px) {
 
     .sitx-header__inner a {
