--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@ body {
   font-family: "Nunito Sans", sans-serif;
 }
 
+.body-dark * {
+  color: #fff;
+}
+
 .container {
   max-width: 1320px;
   width: 100%;
@@ -56,14 +60,12 @@ body {
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
-  color: #111517;
 }
 
 .sitx-header__inner a {
   font-weight: 800;
   font-size: 24px;
   line-height: 33px;
-  color: #111517;
   margin-left: 81px;
 }
 
@@ -79,13 +81,6 @@ body {
   height: 200px;
   margin: 0 auto;
   padding: 8px;
-}
-
-.erro {
-  color: red;
-  font-size: 15px;
-  margin-top: 20px;
-  display: none;
 }
 
 @media screen and (max-width: 700px) {
@@ -150,7 +145,6 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #111517;
   border: radius 15px;
   border: 2px solid transparent;
 }
@@ -176,7 +170,6 @@ body {
   }
 }
 #hero__link {
-  box-shadow: 0px 0px 5px 10px rgba(34, 33, 33, 0.029);
   border-radius: 5px;
   max-width: 280px;
   padding-bottom: 48px;
@@ -202,7 +195,6 @@ body {
   font-weight: 600;
   font-size: 14px;
   line-height: 16px;
-  color: rgba(17, 21, 23, 0.631372549);
   padding: 8px 0;
 }
 
@@ -210,7 +202,6 @@ body {
   font-weight: 600;
   font-size: 14px;
   line-height: 16px;
-  color: #111517;
 }
 
 @media screen and (max-width: 700px) {
