--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,11 +1,11 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *,
 *::before,
-*::after{
-    box-sizing: inherit;
+*::after {
+  box-sizing: inherit;
 }
 
 h2,
@@ -14,31 +14,33 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 ol,
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
-    display: inline-block;
+  text-decoration: none;
+  display: inline-block;
 }
 
 body {
-    margin: 0 20px;
-    font-family: 'Nunito Sans', sans-serif;
-
+  margin: 0 20px;
+  font-family: "Nunito Sans", sans-serif;
 }
 
-.container{
-    max-width: 1320px;
-    width: 100%;
-    padding: 0 20px;
-    
+.body-dark * {
+  color: #fff;
+}
+
+.container {
+  max-width: 1320px;
+  width: 100%;
+  padding: 0 20px;
 }
